--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 body {
-  padding-top: 5rem;
+  /* padding-top: 5rem; */
+  background-image: url("../images/linus-nylund-UCIZh0-OYPw-unsplash (1).jpg");
 }
+
 .starter-template {
+  background-image: \beginners-week-five\images\clone-in-desktop-example.png;
   padding: 3rem 1.5rem;
   text-align: center;
 }
